# pikipedia

./: .env.example  .gitignore  API_DOCUMENTATION.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  Procfile  README.md  TESTING_GUIDE.md  criteria.yaml  deploy.py  generate_answers.py  main.py  pyproject.toml  render.yaml  requirements.txt  setup.py  setup_env.py  test_local.py  test_questions.csv
.github/workflows/: ci.yml
chrome-extension/: README.md  background.js  background_simple.js  content.js  extension-generator.html  manifest.json  popup.html  styles.css
leetcode-ai-coach/: .env.example  .gitignore  README.md  main.py
leetcode-ai-coach/chrome-extension/: README.md  background.js  content.js  manifest.json  popup.html  styles.css
src/kidapp/: api.py  auth.py  crew.py  enhanced_api.py  main.py  models.py  quiz_generator.py  rag_system.py
src/kidapp/agents/: analoger.py  guardrails_agent.py  image_analyzer.py  pipeline_agents.py  researcher.py  validator.py
src/kidapp/config/: agents.yaml  tasks.yaml
src/kidapp/images/: test_caption.py
src/kidapp/routers/: __init__.py  auth_router.py  leetcode_coach.py  quiz_router.py  session_router.py
src/kidapp/static/: dashboard.html  index.html  login.html  quiz.html
src/kidapp/tasks/: task_analogy.py  task_guardrails.py  task_image_analysis.py  task_image_present.py  task_present.py  task_research.py  task_validate.py
uploaded_images/: .gitkeep
