[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wonderbot"
version = "1.0.0"
description = "AI-powered educational web app for kids"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "flask==3.0.0",
    "fastapi",
    "uvicorn[standard]",
    "python-multipart",
    "crewai",
    "crewai-tools", 
    "openai",
    "python-dotenv",
    "Pillow",
    "requests"
]

[tool.hatch.build.targets.wheel]
packages = ["src/kidapp"]
