[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wonderbot"
version = "1.0.0"
description = "AI-powered educational web app for kids using CrewAI agents"
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "python-multipart==0.0.6",
    "crewai==0.126.0",
    "crewai-tools==0.51.1",
    "openai==1.3.7",
    "python-dotenv==1.0.0",
    "Pillow==10.1.0",
    "requests==2.31.0"
]

[tool.hatch.build.targets.wheel]
packages = ["src/kidapp"]
